<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/infoback"
    tools:context=".info">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="190dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:srcCompat="@drawable/nishant" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="72dp"
        android:layout_height="21dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.962"
        app:srcCompat="@drawable/uniicon" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="239dp"
        android:layout_height="185dp"
        android:fontFamily="sans-serif"
        android:text="@string/aboutMe"
        android:textColor="#F4F1F1"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="394dp"
        android:layout_height="384dp"
        android:fontFamily="sans-serif"
        android:text="@string/info"
        android:textAlignment="viewStart"
        android:textColor="#F8F4F4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="255dp"
        android:layout_height="47dp"
        android:fontFamily="sans-serif"
        android:text="@string/about_me"
        android:textAlignment="center"
        android:textColor="#F8F7F7"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="83dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="313dp" />

</androidx.constraintlayout.widget.ConstraintLayout>