<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_mask_group_5"
    tools:context=".addlocation">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/add_danger_location_in_map"
        android:textColor="#090808"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView12"
        android:layout_width="286dp"
        android:layout_height="181dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_city_name"
                android:textColorHint="#090808"
                >

                <EditText
                    android:id="@+id/cityname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_city_name"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_longitude"
                android:textColorHint="#090808"
                app:endIconDrawable="@drawable/ic_longitude"
             >

                <EditText
                    android:id="@+id/longitude_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_longitude"
                    android:hint="@string/enter_longitude"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColor="#070505"
                    android:textColorHint="#070505" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_latitude"
                android:textColorHint="#070505">

                <EditText
                    android:id="@+id/latitude_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_latitude"
                    android:hint="@string/enter_latitude"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColor="#070505"
                    android:textColorHint="#070505" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cosbut1"
        android:elevation="20dp"
        android:stateListAnimator="@null"
        android:text="@string/add_location"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView12"
        app:layout_constraintEnd_toEndOf="@+id/cardView12"
        app:layout_constraintStart_toStartOf="@+id/cardView12"
        app:layout_constraintTop_toBottomOf="@+id/cardView12" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/logoforscr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>